--- a/WebContent/resources/css/add-customer-style.css
+++ b/WebContent/resources/css/add-customer-style.css
@@ -4,7 +4,7 @@ form {
 
 label {
 	font-size: 16px; 
-	width: 100px; 
+	width: 130px; 
 	display: block; 
 	text-align: right;
 	margin-right: 10px;
@@ -25,6 +25,7 @@ input {
 	width: 130px; 
 	padding: 5px 10px; 
 	margin-top: 30px;
+	margin-left: 60px;
 	background: #cccccc;
 }
 
@@ -39,5 +40,9 @@ tr:nth-child(odd) {background: #FFFFFF}
 tr {
 	border-style:none;
 	text-align:left;	
+}
+
+error{
+	color:red;
 }
 	
